# dotty

./: .gitattributes  AGENTS.md  Cargo.toml  build.rs  clippy.toml  mise.toml  plan.md  readme.md
.github/workflows/: audit.yml  build.yml  ci.yml  release.yml
src/: backups.rs  cli.rs  config.rs  convention.rs  error.rs  fs.rs  fs_utils.rs  git.rs  lib.rs  log.rs  main.rs  paths.rs  plan.rs  platform.rs  prompt.rs  repo_state.rs  symbols.rs  symlink.rs
src/cli/commands/: init.rs
src/commands/: add.rs  apply.rs  clean.rs  config.rs  init.rs  mod.rs  remove.rs  status.rs
tests/: common.rs  test_add.rs  test_apply.rs  test_init.rs  test_remove_status_clean.rs  test_snapshots.rs
tests/snapshots/: test_snapshots__apply_dry_run_new_files.snap  test_snapshots__apply_dry_run_with_overrides.snap  test_snapshots__apply_second_run_all_skipped.snap  test_snapshots__status_broken_symlink.snap  test_snapshots__status_clean.snap  test_snapshots__status_git_dirty.snap  test_snapshots__status_inactive_tiers.snap  test_snapshots__status_tier_conflicts.snap
