[package]
name = "dotty"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "A minimal dotfiles manager for multiple machines"
license-file = "LICENSE"
authors = ["Ilshat Sultanov <ilshat@sultanov.team>"]
repository = "https://github.com/just-sultanov/dotty"
keywords = ["dotfiles", "config-management", "cli", "symlink"]
categories = ["command-line-utilities", "development-tools"]
readme = "readme.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3"
