[package]
name = "dotty"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "A minimal dotfiles manager for multiple machines"
license-file = "LICENSE"
authors = ["Ilshat Sultanov <ilshat@sultanov.team>"]
repository = "https://github.com/just-sultanov/dotty"
keywords = ["dotfiles", "config-management", "cli", "symlink"]
categories = ["command-line-utilities", "development-tools"]
readme = "readme.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
toml = "1.1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dir_spec = "0.5.2"
symlink-rs = "1.0.0"
path-slash = "0.2"
indicatif = "0.17"

[dev-dependencies]
insta = "1"
proptest = "1"
serial_test = "3"
temp-env = "0.3"
tempfile = "3"

[lints.rust]
unused = "warn"
dead_code = "warn"
missing_docs = "warn"

[lints.clippy]
disallowed_methods = "warn"
